# covidtweets

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py  twitter_stream_simulation.py
config/: example-config.ini
src/: scraper.py
src/models/: application_config.py  base_config.py  scraper_config.py  sink_config.py  source_config.py  spark_config.py
src/sink/: writer.py
src/source/: cleanup_tweets.py  stream_reader.py
src/utils/: parser.py
tests/: conftest.py
tests/unit/: .coveragerc  test_cleanup_tweets.py  test_scraper.py
