[tool.poetry]
name = "covidtweets"
version = "0.1.0"
description = ""
authors = ["Guillermo Soberón <guillermo.soberon@the7bridges.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
pre-commit = "^3.5.0"
pip = "^23.3.1"
beautifulsoup4 = "^4.12.2"
pytest = "^7.4.3"
pandas = "^2.1.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
